<resources>
    <string name="app_name">News 24/7</string>
    <string name="sign_in_email_hint">Email</string>
    <string name="sign_in_password_hint">Password</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="sign_in_sign_up">Not a member? sign up here</string>

    <string name="sign_up_email_hint">Email</string>
    <string name="sign_up_password_hint">Password</string>
    <string name="sign_up_password1_hint">Password</string>
    <string name="sign_up_button">SIGN UP</string>

    <string name="article_author">Written By: </string>
    <string name="article_source">Original Source: </string>
    <string name="article_date">Published in: </string>
    <string name="article_full">Click here to read full article</string>

    <string name="nav_business">Business</string>
    <string name="nav_entertainment">Entertainment</string>
    <string name="nav_general">General</string>
    <string name="nav_health">Health</string>
    <string name="nav_science">Science</string>
    <string name="nav_sport">Sport</string>
    <string name="nav_technology">Technology</string>

    <string name="sign_out_item">Sign Out</string>
    <string name="appwidget_text">New Widget</string>
    <string name="add_widget">Add widget</string>

    <string name="float_button">Add This Article to favorites</string>
    <string name="option_item_saved">Saved Articles</string>
    <string name="valid_email">Please Enter a valid Email</string>
    <string name="valid_password">Please Enter a valid Password</string>
    <string name="sign_in_failed">"You Entered a wrong Password, Or You don't have an account"</string>
    <string name="password_2">The two passwords does not match</string>
    <string name="password_6">Password must be 6 characters or more</string>
    <string name="signup_success">Signup Succeeded</string>
    <string name="signup_error">Signup Failed</string>
    <string name="no_internet">No Internet</string>
</resources>
