<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/nav_business" />
        <item
            android:id="@+id/nav_entertainment"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/nav_entertainment" />
        <item
            android:id="@+id/nav_general"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/nav_general" />
        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/nav_health" />
        <item
            android:id="@+id/nav_science"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/nav_science" />
        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/nav_sport" />
        <item
            android:id="@+id/nav_technology"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/nav_technology" />


    </group>
</menu>