<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/sign_up_layout"
    xmlns:android="http://schemas.android.com/apk/res/android">


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zaher.news247.Activities.SignupActivity">
    <LinearLayout
        android:padding="75dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:dividerPadding="1000000dp">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            >
            <EditText

                android:id="@+id/email_sign_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/sign_up_email_hint"
                android:inputType="textEmailAddress"

                >
            </EditText>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:hint="@string/sign_up_password_hint"
                android:inputType="textPassword"
                >
            </EditText>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/password1_sign_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:hint="@string/sign_up_password1_hint"
                android:inputType="textPassword"
                >
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:text="@string/sign_up_button"
            />


    </LinearLayout>
</ScrollView>

</android.support.design.widget.CoordinatorLayout>